+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 3.0a5?
===========================

*Release date: XX-XXX-2008*

Core and Builtins
-----------------

- Issue #2221: Corrected a SystemError "error return without exception set",
  when the code executed by exec() raises an exception, and sys.stdout.flush()
  also raises an error.

- Bug #2565: The repr() of type objects now calls them 'class', 
  not 'type' - whether they are builtin types or not.

- The command line processing was converted to pass Unicode strings
  through as unmodified as possible; as a consequence, the C API
  related to command line arguments was changed to use wchar_t.

Extension Modules
-----------------

Library
-------

- Issue #2058: Remove the buf attribute and add __slots__ to the TarInfo
  class in order to reduce tarfile's memory usage.

- Bug #2606: Avoid calling .sort() on a dict_keys object.

- The bundled libffi copy is now in sync with the recently released
  libffi3.0.5 version, apart from some small changes to
  Modules/_ctypes/libffi/configure.ac.

Build
-----

- "make install" is now an alias for "make altinstall", to prevent
  accidentally overwriting a Python 2.x installation.
  Use "make fullinstall" to force Python 3.0 to be installed as
  "python".

- Issue #2544: On HP-UX systems, use 'gcc -shared' for linking when
  gcc is used as compiler.

What's New in Python 3.0a4?
===========================

*Release date: 02-Apr-2008*

Core and Builtins
-----------------

- Bug #2301: Don't try decoding the source code into the original
  encoding for syntax errors.

Extension Modules
-----------------

- The dl module was removed, use the ctypes module instead.

- Use wchar_t functions in _locale module.

Library
-------

- The class distutils.commands.build_py.build_py_2to3 can be used
  as a build_py replacement to automatically run 2to3 on modules
  that are going to be installed.
